Some templating
Former-commit-id: 6ba6d4f80bfd5111d66d5d2baa7966f22407d294
